fix header gap  on Firefox

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,10 @@ html > div {
 	font-size : 90%;
 	color : #265cff;
 }
+header {
+	margin :0px;
+	padding : 0px;
+}
 .signo_informacion_div {
 	width : 100%;
 	padding: 2%;
@@ -337,6 +341,8 @@ div {
 	border-style: solid;
 	border-color : black;
 	border : 3px;
+	padding : 0px;
+	margin : 0px;
 }
 .titulo_principal {
 	
